Iris4Life.org  v1.0

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 </head>
 <body>
+
 <div class="pace  pace-inactive">
     <div class="pace-progress" data-progress-text="100%" data-progress="99" style="width: 100%;">
         <div class="pace-progress-inner"></div>
@@ -40,9 +41,7 @@
             <a class="navbar-brand" href="">
                 <span>IRIS4LIFE</span>
             </a>
-
         </div>
-
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <div class="menu-container">
@@ -63,7 +62,6 @@
     </div>
     <!-- /.container -->
 </nav>
-<!--=== End Header ===-->
 <!--=== End Header ===-->
 
 <!-- Intro Section -->
@@ -87,7 +85,7 @@
                             <div>
                                 <h3 >“Where there is love, there is life”</h3>
                                 <p> - Mahatma Gandhi - </p>
-                                <h1></h1><br>
+                                <br>
                                 <a href="" class="btn-u btn-brd btn-brd-hover btn-u-light " style="margin-left: 2px;">LEARN MORE</a>
                                 <a href="" ng-click="goToExplorer()" class="btn-u btn-brd btn-brd-hover btn-u-light" style="margin-left: 10px">  EXPLORE QTN  </a>
                             </div>
@@ -110,8 +108,7 @@
                             <div>
                                 <h3 >“Where there is great love, there are always miracles”</h3>
                                 <p>- Willa Cather -
-                                </p>
-                                <h1></h1><br>
+                                </p><br>
                                 <a href="" class="btn-u btn-brd btn-brd-hover btn-u-light " style="margin-left: 2px;">LEARN MORE</a>
                                 <a href="" ng-click="goToExlorer()" class="btn-u btn-brd btn-brd-hover btn-u-light" style="margin-left: 10px">EXPLORE QTN</a>
                             </div>
@@ -132,8 +129,7 @@
                         <div class="home_top_banner">
                             <div>
                                 <h3 >"Where there is love, nothing is too much trouble and there is always time”</h3>
-                                <p>- Abdul Baha -</p>
-                                <h1></h1><br>
+                                <p>- Abdul Baha -</p><br>
                                 <a href="" class="btn-u btn-brd btn-brd-hover btn-u-light " style="margin-left: -19px;">LEARN MORE</a>
                                 <a href="" ng-click="goToExlorer()" class="btn-u btn-brd btn-brd-hover btn-u-light" style="margin-left: 10px">EXPLORE QTN</a>
                             </div>
@@ -240,34 +236,6 @@
                 </div>
             </li>
         </ul>
-    <div class="clients-section parallaxBg">
-        <div class="container">
-            <div class="title-v1">
-                <h2>Our Partners</h2>
-            </div>
-            <ul class="owl-clients-v2 owl-carousel owl-theme" style="opacity: 1; display: block;">
-                <div class="owl-wrapper-outer" id="our-client">
-                    <li class="item"><a href=""><img src="images/national-geographic.png" alt=""></a></li>
-                    <li class="item"><a href=""><img src="images/inspiring.png" alt=""></a></li>
-                    <li class="item"><a href=""><img src="images/fred-perry.png" alt=""></a></li>
-                    <li class="item"><a href=""><img src="images/emirates.png" alt=""></a></li>
-                    <li class="item"><a href=""><img src="images/baderbrau.png" alt=""></a></li>
-                    <li class="item"><a href=""><img src="images/inspiring.png" alt=""></a></li>
-                </div>
-
-                <div class="owl-controls clickable">
-                    <div class="owl-pagination">
-                        <div class="owl-page">
-                            <span class=""></span>
-                        </div>
-                        <div class="owl-page active">
-                            <span class=""></span>
-                        </div>
-                    </div>
-                </div>
-            </ul>
-        </div>
-    </div>
 
 </section>
 <!-- End Portfolio Section -->
@@ -287,7 +255,7 @@
 <!-- Services Section -->
 
 <!-- End Services Section -->
-<section id="portfolio" class="about-section">
+<section id="portfolio">
     <div class="container content-lg">
         <div class="title-v1">
             <h2>OUR ACTIVITIES</h2>
@@ -346,16 +314,16 @@
                     <div class="news-v1-in">
                         <img class="img-responsive" src="images/img1(1).jpg" alt="">
                         <h3><a href="">Free cost</a></h3>
-                        <p>Because Iris4Life’s vision is to better Vietnam Charity network which is full of non-profit activities, we require no cost from our all members; thus, they needn’t worry about losing their money before getting something for their projects.</p>
+                        <p>Our vision is to better Vietnam Charity network, we require no cost from our all members; thus, they needn’t worry about losing their money before getting something for their projects.</p>
                         <ul class="list-inline news-v1-info">
                         </ul>
                     </div>
                 </div>
                 <div class="col-md-3 md-margin-bottom-40">
                     <div class="news-v1-in">
-                        <img class="img-responsive" src="images/img4(1).png" alt="">
+                        <img class="img-responsive" src="images/img4(1).jpg" alt="">
                         <h3><a href="">Trusted information</a></h3>
-                        <p>Thanks to our monitoring system, Iris4Life can affirm users with providing accurate and updated information about projects and causes appeared on our website.</p>
+                        <p>Thanks to our monitoring system, Iris4Life can confidently affirm users with providing accurate and updated information about projects and causes appeared on our website.</p>
                         <ul class="list-inline news-v1-info">
                         </ul>
                     </div>
@@ -447,62 +415,61 @@
 <section id="contact" class="contacts-section">
     <div class="container content-lg">
         <div class="title-v1">
-            <h2>Contact Us</h2>
-            <p>Send us if you have any question</p>
+        <br>
+        <h2>Contact Us</h2>
+        <p>Send us if you have any question</p>
         </div>
-
         <div class="row contacts-in">
             <div class="col-md-6 md-margin-bottom-40">
-                <ul class="list-unstyled">
-                    <li><i class="fa fa-home"></i> 300 Vo Nguyen Giap street, Da Nang city, Viet Nam</li>
-                    <li><i class="fa fa-phone"></i> +84 (0511) 655 6999</li>
-                    <li><i class="fa fa-envelope"></i> <a href="http://htmlstream.com/preview/unify-v1.7/One-Page/info@example.com">admin@qtnglobal.org</a></li>
-                    <li><i class="fa fa-globe"></i> <a href="http://htmlstream.com/">www.qtnglobal.org</a></li>
-                </ul>
-            </div>
+            <ul class="list-unstyled">
+                <li><i class="fa fa-home"></i> 300 Vo Nguyen Giap street, Da Nang city, Viet Nam</li>
+                <li><i class="fa fa-phone"></i> +84 (0511) 655 6999</li>
+                <li><i class="fa fa-envelope"></i> <a href="http://htmlstream.com/preview/unify-v1.7/One-Page/info@example.com">admin@qtnglobal.org</a></li>
+                <li><i class="fa fa-globe"></i> <a href="http://htmlstream.com/">www.qtnglobal.org</a></li>
+            </ul>
+        </div>
 
             <div class="col-md-6">
-                <form action="http://htmlstream.com/preview/unify-v1.7/One-Page/assets/php/sky-forms-pro/demo-contacts-process.php" method="post" id="sky-form3" class="sky-form contact-style" novalidate="novalidate">
-                    <fieldset>
-                        <label>Name</label>
-                        <div class="row">
-                            <div class="col-md-7 margin-bottom-20 col-md-offset-0">
-                                <div>
-                                    <input type="text" name="name" id="name" class="form-control"/>
-                                </div>
+            <form action="" method="post" id="sky-form3" class="sky-form contact-style" novalidate="novalidate">
+                <fieldset>
+                    <label>Name</label>
+                    <div class="row">
+                        <div class="col-md-7 margin-bottom-20 col-md-offset-0">
+                            <div>
+                                <input type="text" name="name" id="name" class="form-control"/>
                             </div>
                         </div>
-
-                        <label>Email <span class="color-red">*</span></label>
-                        <div class="row">
-                            <div class="col-md-7 margin-bottom-20 col-md-offset-0">
-                                <div>
-                                    <input type="text" name="email" id="email" class="form-control"/>
-                                </div>
-                            </div>
-                        </div>
-
-                        <label>Message</label>
-                        <div class="row">
-                            <div class="col-md-11 margin-bottom-20 col-md-offset-0">
-                                <div>
-                                    <textarea rows="8" name="message" id="message" class="form-control"></textarea>
-                                </div>
-                            </div>
-                        </div>
-
-                        <p><button type="submit" class="btn-u btn-brd btn-brd-hover btn-u-dark">Send Message</button></p>
-                    </fieldset>
-
-                    <div class="message">
-                        <i class="rounded-x fa fa-check"></i>
-                        <p>Your message was successfully sent!</p>
                     </div>
-                </form>
-            </div>
-        </div>
-    </div>
 
+                    <label>Email <span class="color-red">*</span></label>
+                    <div class="row">
+                        <div class="col-md-7 margin-bottom-20 col-md-offset-0">
+                            <div>
+                                <input type="text" name="email" id="email" class="form-control"/>
+                            </div>
+                        </div>
+                    </div>
+
+                    <label>Message</label>
+                    <div class="row">
+                        <div class="col-md-11 margin-bottom-20 col-md-offset-0">
+                            <div>
+                                <textarea rows="8" name="message" id="message" class="form-control"></textarea>
+                            </div>
+                        </div>
+                    </div>
+
+                    <p><button type="submit" class="btn-u btn-brd btn-brd-hover btn-u-dark">Send Message</button></p>
+                </fieldset>
+
+                <div class="message">
+                    <i class="rounded-x fa fa-check"></i>
+                    <p>Your message was successfully sent!</p>
+                </div>
+            </form>
+            </div>
+        </div
+</div>
     <div class="copyright-section" style="color: #555">
         <p>2015 © All Rights Reserved. QTN Theme by <a target="_blank" href="https://www.facebook.com/qtnglobal?fref=ts">Silicon Chapter</a></p>
         <ul class="social-icons">
@@ -511,9 +478,11 @@
             <li><a href="https://www.facebook.com/qtnglobal?fref=ts" data-original-title="Goole Plus" class="social_google-plus rounded-x"></a></li>
             <li><a href="https://www.facebook.com/qtnglobal?fref=ts" data-original-title="Linkedin" class="social_linkedin rounded-x"></a></li>
         </ul>
+        <span class="page-scroll"><a href="#intro"><i class="fa fa-angle-double-up back-to-top"></i></a></span>
     </div>
+        </div>
 </section>
-
+<!-- End Contact Section -->
 
 
 <style>
